Bug 141090 - New profiles do not display current theme w/ check flag patch by jerry.tan@sun.com r=me sr=bryner